--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -101,10 +101,8 @@
     <div class="w-12 flex align-items-center justify-content-between">
       <p-rating></p-rating>
     </div>
-  </div>
-  <ng-template pTemplate="footer">
-    <div class="formgrid grid">
-      <div class="field col">
+    <div class="w-12 flex flex-wrap pt-3">
+      <div class="w-6 p-2 pl-0 flex align-items-center justify-content-center">
         <button
           pButton
           pRipple
@@ -114,17 +112,18 @@
           (click)="hideNewLanguageDialog()"
         ></button>
       </div>
-      <div class="field col">
+      <div class="w-6 p-2 pr-0 flex align-items-center justify-content-center">
         <button
           pButton
           pRipple
-          label="Agregar"
+          label="Editar"
           icon="pi pi-check"
+          type="submit"
           class="p-button-success w-full"
         ></button>
       </div>
     </div>
-  </ng-template>
+  </div>
 </p-dialog>
 
 <p-dialog
@@ -183,10 +182,8 @@
     <div class="w-12 flex align-items-center justify-content-between">
       <p-rating></p-rating>
     </div>
-  </div>
-  <ng-template pTemplate="footer">
-    <div class="formgrid grid">
-      <div class="field col">
+    <div class="w-12 flex flex-wrap pt-3">
+      <div class="w-6 p-2 pl-0 flex align-items-center justify-content-center">
         <button
           pButton
           pRipple
@@ -196,15 +193,16 @@
           (click)="hideEditLanguageDialog()"
         ></button>
       </div>
-      <div class="field col">
+      <div class="w-6 p-2 pr-0 flex align-items-center justify-content-center">
         <button
           pButton
           pRipple
           label="Editar"
           icon="pi pi-check"
+          type="submit"
           class="p-button-success w-full"
         ></button>
       </div>
     </div>
-  </ng-template>
+  </div>
 </p-dialog>
