--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -67,41 +67,69 @@
         Agrega un nuevo puntaje y escribe un comentario.
       </span>
     </div>
-    <div class="w-12 flex align-items-center justify-content-between">
-      <p-rating></p-rating>
-    </div>
-    <div class="w-12 flex flex-column justify-content-start h-9rem">
-      <label for="inputLink" class="block text-left mb-2">Feedback</label>
-      <textarea
-        rows="5"
-        cols="30"
-        pInputTextarea
-        [autoResize]="true"
-        placeholder="Escribe un comentario"
-        class="w-full h-auto"
-      ></textarea>
-    </div>
-    <div class="w-12 flex flex-wrap pt-3">
-      <div class="w-6 p-2 pl-0 flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          label="Cancelar"
-          icon="pi pi-times"
-          class="p-button-outlined p-button-secondary w-full"
-          (click)="hideNewFeedbackDialog()"
-        ></button>
+    <form
+      class="w-12 flex flex-column"
+      [formGroup]="feedBkForm"
+      (ngSubmit)="onSveFeedBkForm()"
+      autocomplete="off"
+    >
+      <div class="w-12 flex flex-column align-items-center">
+        <div class="w-12 flex align-items-center justify-content-between">
+          <p-rating formControlName="rating"></p-rating>
+        </div>
+        <div class="w-12 flex align-items-center">
+          <small
+            id="inputRating"
+            class="hidden"
+            [ngClass]="{ 'p-error block text-left': isValidField('rating') }"
+            >Por favor, completa este campo.</small
+          >
+        </div>
       </div>
-      <div class="w-6 p-2 pr-0 flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          label="Editar"
-          icon="pi pi-check"
-          type="submit"
-          class="p-button-success w-full"
-        ></button>
+      <div class="w-12 flex flex-column justify-content-start h-9rem">
+        <label for="inputComment" class="block text-left mb-2">Feedback</label>
+        <textarea
+          rows="5"
+          cols="30"
+          pInputTextarea
+          [autoResize]="true"
+          placeholder="Escribe un comentario"
+          formControlName="feedback"
+          class="w-full h-auto"
+        ></textarea>
+        <small
+          id="inputComment"
+          class="hidden"
+          [ngClass]="{ 'p-error block text-left': isValidField('feedback') }"
+          >Por favor, ingresa su comentario.</small
+        >
       </div>
-    </div>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideNewFeedbackDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
+      </div>
+    </form>
   </div>
 </p-dialog>
