--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -56,6 +56,7 @@
     </div>
   </div>
 </div>
+
 <p-dialog
   [(visible)]="technicalSkillsDialog"
   [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
@@ -77,53 +78,75 @@
         Agrega tu nueva experiencia técnica.
       </span>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputLink" class="block text-left mb-2"
-        >Habilidad técnica</label
-      >
-      <input
-        pInputText
-        placeholder="Ingrese su habilidad técnica"
-        class="w-full"
-      />
-      <small id="inputLink" class="p-error block text-left">err</small>
-    </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputNumber" class="block text-left mb-2"
-        >Años de experiencia</label
-      >
-      <p-inputNumber
-        inputId="inputNumber"
-        class="w-full"
-        styleClass="w-full"
-        placeholder="Nro. de años"
-      ></p-inputNumber>
-      <small id="inputNumber" class="p-error block text-left">err</small>
-    </div>
+    <form
+      class="w-12 flex flex-column"
+      [formGroup]="techSkForm"
+      autocomplete="off"
+      (onsubmit)="onSveTechSkForm()"
+    >
+      <div class="w-12 flex flex-column justify-content-start mb-2">
+        <label for="inputLink" class="block text-left mb-2"
+          >Habilidad técnica</label
+        >
+        <input
+          pInputText
+          placeholder="Ingrese su habilidad técnica"
+          class="w-full"
+          formControlName="name"
+        />
+        <small
+          id="inputLink"
+          class="hidden"
+          [ngClass]="{ 'p-error block text-left': isValidField('name') }"
+          >Este campo es obligatorio.</small
+        >
+      </div>
+      <div class="w-12 flex flex-column justify-content-start mb-2">
+        <label for="inputNumber" class="block text-left mb-2"
+          >Años de experiencia</label
+        >
+        <p-inputNumber
+          inputId="inputNumber"
+          class="w-full"
+          styleClass="w-full"
+          placeholder="Nro. de años"
+          formControlName="yearExp"
+        ></p-inputNumber>
+        <small
+          id="inputNumber"
+          class="hidden"
+          [ngClass]="{ 'p-error block text-left': isValidField('yearExp') }"
+          >Los años de experiencia deben ser un número positivo.</small
+        >
+      </div>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideNewTechnicalSkillDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
+      </div>
+    </form>
   </div>
-  <ng-template pTemplate="footer">
-    <div class="formgrid grid">
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Cancelar"
-          icon="pi pi-times"
-          class="p-button-outlined p-button-secondary w-full"
-          (click)="hideNewTechnicalSkillDialog()"
-        ></button>
-      </div>
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Agregar"
-          icon="pi pi-check"
-          class="p-button-success w-full"
-        ></button>
-      </div>
-    </div>
-  </ng-template>
 </p-dialog>
 
 <p-dialog
@@ -147,35 +170,55 @@
         Agrega tu nueva experiencia blanda.
       </span>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputLink" class="block text-left mb-2"
-        >Habilidad blanda</label
-      >
-      <input pInputText placeholder="Nombre de la habilidad" class="w-full" />
-      <small id="inputLink" class="p-error block text-left">err</small>
-    </div>
+    <form
+      class="w-12 flex flex-column"
+      [formGroup]="softSkForm"
+      autocomplete="off"
+      (onsubmit)="onSveSoftSkForm()"
+    >
+      <div class="w-12 flex flex-column justify-content-start mb-2">
+        <label for="inputSoft" class="block text-left mb-2"
+          >Habilidad blanda</label
+        >
+        <input
+          pInputText
+          placeholder="Nombre de la habilidad"
+          class="w-full"
+          formControlName="name"
+        />
+        <small
+          id="inputSoft"
+          class="hidden"
+          [ngClass]="{ 'p-error block text-left': isValidSoftField('name') }"
+          >Este campo es obligatorio.</small
+        >
+      </div>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideNewSoftSkillDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
+      </div>
+    </form>
   </div>
-  <ng-template pTemplate="footer">
-    <div class="formgrid grid">
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Cancelar"
-          icon="pi pi-times"
-          class="p-button-outlined p-button-secondary w-full"
-          (click)="hideNewSoftSkillDialog()"
-        ></button>
-      </div>
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Agregar"
-          icon="pi pi-check"
-          class="p-button-success w-full"
-        ></button>
-      </div>
-    </div>
-  </ng-template>
 </p-dialog>
