--- a/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
@@ -34,39 +34,56 @@
         Tiempo de una nueva descripción? Editala.
       </span>
     </div>
-    <div class="w-12 flex flex-column justify-content-start h-9rem">
-      <label for="inputLink" class="block text-left mb-2">Descripción</label>
-      <textarea
-        rows="5"
-        cols="30"
-        pInputTextarea
-        [autoResize]="true"
-        placeholder="Escribe un descripción"
-        class="w-full h-auto"
-      ></textarea>
-    </div>
+    <form
+      class="w-12 flex flex-column"
+      [formGroup]="summForm"
+      (ngSubmit)="onSveSummForm()"
+      autocomplete="off"
+    >
+      <div class="w-12 flex flex-column justify-content-start h-9rem">
+        <label for="inputLink" class="block text-left mb-2">Descripción</label>
+        <textarea
+          rows="5"
+          cols="30"
+          pInputTextarea
+          [autoResize]="true"
+          placeholder="Escribe un descripción"
+          class="w-full h-auto"
+          formControlName="description"
+        ></textarea>
+        <small
+          id="inputLink"
+          class="hidden"
+          [ngClass]="{ 'p-error block text-left': isValidField('description') }"
+          >Este campo no puede estar vacío.</small
+        >
+      </div>
+      <div class="w-12 flex flex-wrap pt-3">
+        <div
+          class="w-6 p-2 pl-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Cancelar"
+            icon="pi pi-times"
+            class="p-button-outlined p-button-secondary w-full"
+            (click)="hideEditDescriptionDialog()"
+          ></button>
+        </div>
+        <div
+          class="w-6 p-2 pr-0 flex align-items-center justify-content-center"
+        >
+          <button
+            pButton
+            pRipple
+            label="Editar"
+            icon="pi pi-check"
+            type="submit"
+            class="p-button-success w-full"
+          ></button>
+        </div>
+      </div>
+    </form>
   </div>
-  <ng-template pTemplate="footer">
-    <div class="formgrid grid">
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Cancelar"
-          icon="pi pi-times"
-          class="p-button-outlined p-button-secondary w-full"
-          (click)="hideEditDescriptionDialog()"
-        ></button>
-      </div>
-      <div class="field col">
-        <button
-          pButton
-          pRipple
-          label="Agregar"
-          icon="pi pi-check"
-          class="p-button-success w-full"
-        ></button>
-      </div>
-    </div>
-  </ng-template>
 </p-dialog>
