feat: Add form validation messages

--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -72,7 +72,11 @@
       </span>
     </div>
     <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputEduc" class="block text-left mb-2">Institución</label>
+      <label
+        for="inputEduc"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Institución</label
+      >
       <input pInputText placeholder="Nombre de la institución" class="w-full" />
       <small id="inputEduc" class="p-error block text-left">err</small>
     </div>
@@ -85,19 +89,29 @@
       ></p-checkbox>
     </div>
     <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputEduc" class="block text-left mb-2">Carrera</label>
+      <label
+        for="inputEduc"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Carrera</label
+      >
       <input pInputText placeholder="Nombre de la carrera" class="w-full" />
       <small id="inputEduc" class="p-error block text-left">err</small>
     </div>
     <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputEduc" class="block text-left mb-2">Grado</label>
+      <label
+        for="inputEduc"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Grado</label
+      >
       <input pInputText placeholder="Grado de la carrera" class="w-full" />
       <small id="inputEduc" class="p-error block text-left">err</small>
     </div>
     <div class="w-12 flex flex-wrap align-items-center">
       <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
         <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber" class="block text-left mb-2"
+          <label
+            for="inputNumber"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes de inicio</label
           >
           <p-calendar
@@ -112,7 +126,9 @@
       </div>
       <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
         <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber2" class="block text-left mb-2"
+          <label
+            for="inputNumber2"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes fin</label
           >
           <p-calendar
@@ -185,7 +201,11 @@
     </span>
   </div>
   <div class="w-12 flex flex-column justify-content-start mb-2">
-    <label for="inputEduc" class="block text-left mb-2">Institución</label>
+    <label
+      for="inputEduc"
+      class="block text-left mb-2 font-medium text-bluegray-800"
+      >Institución</label
+    >
     <input pInputText placeholder="Nombre de la institución" class="w-full" />
     <small id="inputEduc" class="p-error block text-left">err</small>
   </div>
@@ -198,19 +218,29 @@
     ></p-checkbox>
   </div>
   <div class="w-12 flex flex-column justify-content-start mb-2">
-    <label for="inputEduc" class="block text-left mb-2">Carrera</label>
+    <label
+      for="inputEduc"
+      class="block text-left mb-2 font-medium text-bluegray-800"
+      >Carrera</label
+    >
     <input pInputText placeholder="Nombre de la carrera" class="w-full" />
     <small id="inputEduc" class="p-error block text-left">err</small>
   </div>
   <div class="w-12 flex flex-column justify-content-start mb-2">
-    <label for="inputEduc" class="block text-left mb-2">Grado</label>
+    <label
+      for="inputEduc"
+      class="block text-left mb-2 font-medium text-bluegray-800"
+      >Grado</label
+    >
     <input pInputText placeholder="Grado de la carrera" class="w-full" />
     <small id="inputEduc" class="p-error block text-left">err</small>
   </div>
   <div class="w-12 flex flex-wrap align-items-center">
     <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
       <div class="w-12 flex flex-column justify-content-start mb-2">
-        <label for="inputNumber" class="block text-left mb-2"
+        <label
+          for="inputNumber"
+          class="block text-left mb-2 font-medium text-bluegray-800"
           >Año y mes de inicio</label
         >
         <p-calendar
@@ -225,7 +255,9 @@
     </div>
     <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
       <div class="w-12 flex flex-column justify-content-start mb-2">
-        <label for="inputNumber2" class="block text-left mb-2"
+        <label
+          for="inputNumber2"
+          class="block text-left mb-2 font-medium text-bluegray-800"
           >Año y mes fin</label
         >
         <p-calendar
