--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -85,7 +85,9 @@
       (onsubmit)="onSveTechSkForm()"
     >
       <div class="w-12 flex flex-column justify-content-start mb-2">
-        <label for="inputLink" class="block text-left mb-2"
+        <label
+          for="inputLink"
+          class="block text-left mb-2 font-medium text-bluegray-800 font-medium text-bluegray-800"
           >Habilidad técnica</label
         >
         <input
@@ -102,7 +104,9 @@
         >
       </div>
       <div class="w-12 flex flex-column justify-content-start mb-2">
-        <label for="inputNumber" class="block text-left mb-2"
+        <label
+          for="inputNumber"
+          class="block text-left mb-2 font-medium text-bluegray-800 font-medium text-bluegray-800"
           >Años de experiencia</label
         >
         <p-inputNumber
@@ -177,7 +181,9 @@
       (onsubmit)="onSveSoftSkForm()"
     >
       <div class="w-12 flex flex-column justify-content-start mb-2">
-        <label for="inputSoft" class="block text-left mb-2"
+        <label
+          for="inputSoft"
+          class="block text-left mb-2 font-medium text-bluegray-800"
           >Habilidad blanda</label
         >
         <input
