--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -87,6 +87,7 @@
     <button
       pButton
       class="p-button-outlined border-300 w-full flex flex-column"
+      (click)="fileUpload.click()"
     >
       <i class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"></i>
       <span
@@ -98,6 +99,7 @@
         class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round"
         >PDF</span
       >
+      <input #fileUpload accept=".pdf" type="file" style="display: none" />
     </button>
     <div class="w-12 flex flex-wrap pt-3">
       <div class="w-6 p-2 pl-0 flex align-items-center justify-content-center">
