--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -71,28 +71,37 @@
         Describe y agrega tu nueva experiencia laboral.
       </span>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputCompany" class="block text-left mb-2">Empresa</label>
+    <div class="w-12 flex flex-column justify-content-start">
+      <label
+        for="inputCompany"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Empresa</label
+      >
       <input pInputText placeholder="Nombre de la empresa" class="w-full" />
       <small id="inputCompany" class="p-error block text-left">err</small>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
+    <div class="w-12 flex flex-column justify-content-start py-2">
       <p-checkbox
         [binary]="true"
         inputId="binary"
         label="Aquí en Fractal"
-        class="mt-3"
       ></p-checkbox>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputJob" class="block text-left mb-2">Puesto</label>
+    <div class="w-12 flex flex-column justify-content-start">
+      <label
+        for="inputJob"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Puesto</label
+      >
       <input pInputText placeholder="Puesto en la empresa" class="w-full" />
       <small id="inputJob" class="p-error block text-left">err</small>
     </div>
     <div class="w-12 flex flex-wrap align-items-center">
-      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
-        <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber" class="block text-left mb-2"
+      <div class="w-12 sm:w-6 flex flex-column align-items-center md:pr-3">
+        <div class="w-12 flex flex-column justify-content-start">
+          <label
+            for="inputNumber"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes de inicio</label
           >
           <p-calendar
@@ -105,9 +114,11 @@
           <small id="inputNumber" class="p-error block text-left">err</small>
         </div>
       </div>
-      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
-        <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber2" class="block text-left mb-2"
+      <div class="w-12 sm:w-6 flex flex-column align-items-center md:pl-3">
+        <div class="w-12 flex flex-column justify-content-start">
+          <label
+            for="inputNumber2"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes fin</label
           >
           <p-calendar
@@ -121,7 +132,7 @@
         </div>
       </div>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
+    <div class="w-12 flex flex-column justify-content-start">
       <p-checkbox
         [binary]="true"
         inputId="binary"
@@ -180,28 +191,37 @@
         La vida esta llena de cambios. Edita tu experiencia laboral.
       </span>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputCompany" class="block text-left mb-2">Empresa</label>
+    <div class="w-12 flex flex-column justify-content-start">
+      <label
+        for="inputCompany"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Empresa</label
+      >
       <input pInputText placeholder="Nombre de la empresa" class="w-full" />
       <small id="inputCompany" class="p-error block text-left">err</small>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
+    <div class="w-12 flex flex-column justify-content-start py-2">
       <p-checkbox
         [binary]="true"
         inputId="binary"
         label="Aquí en Fractal"
-        class="mt-3"
       ></p-checkbox>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
-      <label for="inputJob" class="block text-left mb-2">Puesto</label>
+    <div class="w-12 flex flex-column justify-content-start">
+      <label
+        for="inputJob"
+        class="block text-left mb-2 font-medium text-bluegray-800"
+        >Puesto</label
+      >
       <input pInputText placeholder="Puesto en la empresa" class="w-full" />
       <small id="inputJob" class="p-error block text-left">err</small>
     </div>
     <div class="w-12 flex flex-wrap align-items-center">
-      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pr-3">
-        <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber" class="block text-left mb-2"
+      <div class="w-12 sm:w-6 flex flex-column align-items-center md:pr-3">
+        <div class="w-12 flex flex-column justify-content-start">
+          <label
+            for="inputNumber"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes de inicio</label
           >
           <p-calendar
@@ -214,9 +234,11 @@
           <small id="inputNumber" class="p-error block text-left">err</small>
         </div>
       </div>
-      <div class="w-12 sm:w-6 flex flex-column align-items-center py-2 md:pl-3">
+      <div class="w-12 sm:w-6 flex flex-column align-items-center md:pl-3">
         <div class="w-12 flex flex-column justify-content-start mb-2">
-          <label for="inputNumber2" class="block text-left mb-2"
+          <label
+            for="inputNumber2"
+            class="block text-left mb-2 font-medium text-bluegray-800"
             >Año y mes fin</label
           >
           <p-calendar
@@ -230,7 +252,7 @@
         </div>
       </div>
     </div>
-    <div class="w-12 flex flex-column justify-content-start mb-2">
+    <div class="w-12 flex flex-column justify-content-start">
       <p-checkbox
         [binary]="true"
         inputId="binary"
