fix: Fixing css for button hover

--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
@@ -44,6 +44,10 @@
     border-radius: 8px;
     background-color: #009688;
     border-color: #009688;
+    &:enabled:hover {
+        background: #007d7c;
+        border-color: #007d7c;
+    }
 }
 
 .returnButton {
