--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
@@ -1,31 +1,30 @@
-<div class="flex" [style]="{ 'height': '100vh' }">
-  <div class="flex align-items-center justify-content-center" [style]="{ 'width': '50%' }">
-    <div class="flex align-items-center justify-content-center" [style]="{ 'width': '75%' }">
-      <div class="w-full">
-        <div class="mb-7">
-          <p-image src="./assets/login/Fractal Logo Login.png" width="350"></p-image>
+<div class="w-fullm m-0 flex grid" [style]="{ 'height': '100vh' }">
+  <div class="w-full p-0 col flex align-items-center justify-content-center">
+    <div class="w-full m-4 flex align-items-center justify-content-center">
+      <div [style]="{ 'width': '75%' }">
+        <div class="mb-5">
+          <p-image src="./assets/login/Fractal Logo Login.png" [style]="{ width: '243.3px', height: '63.66px' }"></p-image>
         </div>
-        <h2>Inicio de sesión</h2>
-        <label>Inicia sesión</label>
-        <h4>Usuario</h4>
+        <h2 class="logInTextHeader">Inicio de sesión</h2>
+        <h1 class="logInSubHeader mb-5">Inicia sesión</h1>
+        <p class="logInSubSubHeader mb-1">Usuario</p>
         <input pInputText placeholder="Nombre de usuario" class="w-full"/>
-        <h4>Contraseña</h4>
+        <p class="logInSubSubHeader mb-1">Contraseña</p>
         <p-password [toggleMask]="true" placeholder="Contraseña" class="w-full" styleClass="w-full p-password p-component p-inputwrapper p-input-icon-right" inputStyleClass="w-full"></p-password>
-        <p class="m-4 ml-0" [style]="{ 'color': '#0B85C3', 'font-weight': 'bold' }">Olvidé mi contraseña</p>
+        <p class="m-4 ml-0 forgotPasswordText">Olvidé mi contraseña</p>
         <button
           pButton
           pRipple
           type="button"
           label="Iniciar sesión"
-          class="p-button-success w-full"
-          [style]="{'height': '50px'}"
+          class="logInButton p-button-success w-full"
           (click)="onLogin()"
         ></button>
       </div>
     </div>
   </div>
-  <div class="surface-100 flex align-items-center justify-content-center" [style]="{ 'width': '50%' }">
-    <p-image src="./assets/login/Map.png"></p-image>
-    <p-image src="./assets/login/People.png" class="absolute"></p-image>
+  <div *ngIf="!mobile" class="surface-100 p-0 col flex align-items-center justify-content-center">
+    <p-image class="w-auto" src="./assets/login/Map.png"></p-image>
+    <p-image class="w-auto" src="./assets/login/People.png" class="absolute"></p-image>
   </div>
 </div>
